# LSTM_stock_prediction

./: .gitignore  Dockerfile  README.md  config.json  interface.py  predict_stock.py  predict_test.ipynb  predict_utils.py  pyproject.toml
src/: config.py  interface.py  predict_stock.py  predict_utils.py
stock_data/: AAPL.csv  AI.PA.csv  ALO.PA.csv  ENGI.PA.csv  GE.csv  IBM.csv  MSFT.csv  SAN.PA.csv
