[tool.poetry]
name = "projet_prediction_stocks"
version = "0.1.0"
description = "Stock prediction project with LSTM"
authors = ["Ambroise012"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
yfinance = "^0.2.44"
numpy = "^1.26.4"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
tensorflow = "^2.17.0"
python-dotenv="^1.1.1"

[tool.poetry.dev-dependencies]
# Example: add testing and linting tools here
pytest = "^8.3.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
